use SBT as build tool