@@ -1,28 +1,25 @@
 # Contributing
 
-To be able setup environment for this plugin, you need:
+This plugin uses SBT as build tool. At the beginning, Intellij Ultimate Edition SDK will be downloaded 
+(into `idea` directory), so be patient. Intellij Ultimate Edition license is nice to have.
 
-- Idea Intellij 14+ (community edition should be enough) with [scala plugin][1]
-- Follow the [instructions][2] to setup general plugin development sdk (IntelliJ 141.+ SDK is required)
-- checkout plugin repository
-- create new project choosing composer-json-plugin directory, select "Intellij Platform Plugin" project type and choose
-"Scala" as additional library (select 2.10.2 version or eventually any 2.10.x).
-- Intellij asks you to overwrite composer-json-plugin.iml file - click yes, but when project will open, you should revert
-that file, using for instance `git checkout composer-json-plugin.iml` command
-- add following libraries in "File -> Project Structure -> Project Settings -> Libraries":
+Following custom SBT commands are defined:
 
-    - click "+" and add "Scala SDK" - required 2.10.x version, 2.10.2 is preferred
-    - &lt;PhpStorm-dir&gt;/plugins/php/lib/php.jar
-    - &lt;PhpStorm-dir&gt;/plugins/php/lib/php-openapi.jar
+* `sbt pluginRun` - run testing Intellij with plugin installed - on first startup you have to install php plugin 
+manually and restart testing Intellij
+* `sbt pluginPack` - prepare plugin for packaging, move all required jars to one directory
+* `sbt pluginCompress` - make zip from `pluginPack` result - output `zip` is a working plugin
+* `sbt pluginProguard` - shrink plugin zip using proguard - result should be ~5 times smaller than raw zip
+* `sbt release` - compile plugin from scratch, prepare package, create zip and shrink it
 
-- *(optional - required to run tests)* add following libraries in "File -> Project Structure -> Project Settings -> Libraries"
+If you want to run tests using Intellij, you should set following VM options in 
+"Run > Edit Configurations > Edit Defaults > JUnit > VM Options":
 
-    - &lt;PhpStorm-dir&gt;/plugins/php/lib/resources_en.jar
-    - &lt;PhpStorm-dir&gt;/plugins/CSS/lib/css.jar
-    - &lt;PhpStorm-dir&gt;/plugins/CSS/lib/css-openapi.jar
-    - &lt;Intellij-dir&gt;/plugins/java-i18n/lib/java-i18n.jar
-    - &lt;Intellij-dir&gt;/plugins/properties/lib/properties.jar
-
-
-[1]: https://plugins.jetbrains.com/plugin/?id=1347
-[2]: https://confluence.jetbrains.com/display/IntelliJIDEA/Prerequisites
+    -ea
+    -Xms128m
+    -Xmx4096m
+    -XX:MaxPermSize=350m
+    -Didea.system.path=$MODULE_DIR$/../../idea/LATEST-EAP-SNAPSHOT/test-system
+    -Didea.config.path=$MODULE_DIR$/../../idea/LATEST-EAP-SNAPSHOT/test-config
+    -Dplugin.path=$MODULE_DIR$/../../target/plugin
+    -Didea.home.path=$MODULE_DIR$/../../idea/LATEST-EAP-SNAPSHOT
